tests/org.eclipse.php.core.tests/workspace/errors/php55/classExclusive/yieldOnlyInFunction2.pdtt
--TEST--
Test unfinished try statement error reporting
--FILE--
<?php
$x = function() {
    yield 1;
};
yield 2;
echo $x;
?>
--EXPECT--
[line=6, start=40, end=47] syntax error, the yield expression can only be used inside a function